corrected email id

--- a/index.html
+++ b/index.html
@@ -748,8 +748,8 @@
                 </div>
             </div>
             <p class="attribution in-coordinators">
-                <b>Venue-</b>&nbsp;JIIT, Sector-62<br>
-                <b>Email-</b>&nbsp;osdhack23@gmail.com<br>
+                <b>Venue-</b>&nbsp;Anywhere (As long as you have internet)<br>
+                <b>Email-</b>&nbsp;osdcjiit@gmail.com<br>
                 <a href="https://discord.gg/HRj5JFeHVq"><b><u>Discord</u></b></a>&nbsp;&nbsp;&nbsp;<a
                     href="https://github.com/osdc"><b><u>Github</u></b></a>
             </p>
@@ -1019,12 +1019,12 @@
                                 src="assets/socials/instagram.svg" /> </a>
                         <a target="_blank" href="https://www.facebook.com/groups/jiitlug/"> <img class="social-icon"
                             src="assets/socials/facebook.svg" /> </a>
-                        <!-- <a target="_blank" href="mailto:osdhack23@gmail.com"><img class="social-icon"
+                        <!-- <a target="_blank" href="mailto:osdcjiit@gmail.com"><img class="social-icon"
                                 src="assets/socials/mail.svg" /></a> -->
                         <!-- <a target="_blank" href="https://code.OSDHACK.org/"> <img class="social-icon" src="assets/socials/code.svg"/></a> -->
                     </div>
                     <p class="attribution">
-                        <b>Venue-</b>&nbsp;JIIT, Sector-62<br>
+                        <b>Venue-</b>&nbsp;Anywhere (As long as you have internet)<br>
                         <b>Email-</b>&nbsp;osdcjiit@gmail.com<br>
                         <a href="https://discord.gg/HRj5JFeHVq"><b><u>Discord</u></b></a>&nbsp;&nbsp;&nbsp;&nbsp;<a
                             href="https://github.com/osdc"><b><u>Github</u></b></a>
