venue changed, mobile view sorted

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- ONLINE EDITION -->
+
 <!--
                                                   
     ,----..                                       
@@ -163,7 +165,8 @@
                     <img id="title-header" src="" />
                     <h2 >Open Source Developer's COMMUNITY</h2>
                     <h2 style="padding-top: 0;font-size: 14px;" >Jaypee Institute Of Information Technology</h3>
-                    <h5 id="presents" style="margin-top: 0;">PRESENTS</h5>
+                    <h5 id="presents" style="margin-bottom: 0;font-weight: 100;margin-top: 0;font-family: LemonMilkMedium;">PRESENTS</h5>
+                    <h4 id="title-sub" style="font-size: 30px;font-weight: 500">OSDHACK'23</h4>
                     <h4 id="title-sub">BACK TO THE FUTURE</h4>
                     <h4 id="title-date">April 21-24, 2023</h4>
                     <div class="more-footer" style="display: flex;
