minor padding fixes

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <!-- <h1 id="title-header">OSDHACK 2023</h1> -->
                         <h2 id="title-sub1" style="margin-top: 0;padding-top: 0 ;font-size: 18px;padding-bottom: 0;">OPEN SOURCE DEVELOPERS COMMUNITY</h2>
                         <h4 style="padding-top: 0;font-size: 14px;" >Jaypee Institute Of Information Technology</h4>
-                        <h4 style="padding-top: 10;font-size: 14px;padding-bottom: 25px;font-variant: small-caps" >presents</h4>
+                        <h4 style="padding-top: 10;font-size: 14px;padding-bottom: 25px;padding-top: 15px;" >presents</h4>
                         <img id="title-header" src="assets/img/osdhack-title.png" />
                         <!-- <img id="title-header-outline" src="./assets/img/Outline_Text.svg" /> -->
                         <h4 id="title-sub"> BACK TO THE FUTURE</h4>
