email id corrected

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <div class="icon-group">
                             <a target="_blank" href="https://www.instagram.com/osdcjiit/"> <img width="48px" class="social-icon"
                                     src="assets/socials/instagram.svg" /> </a>
-                            <a target="_blank" href="mailto:osdcjiit@gmail.com"><img width="48px" class="social-icon"
+                            <a target="_blank" href="mailto:osdhack23@gmail.com"><img width="48px" class="social-icon"
                                     src="assets/socials/mail.svg" /></a>
                             <!-- <a target="_blank" href="https://code.OSDHACK.org/"> <img class="social-icon" src="assets/socials/code.svg"/></a> -->
                             <!-- <a target="_blank" href="https://medium.com/OSDHACK-stories"> <img class="social-icon" src="assets/socials/medium.svg"/></i> </a> -->
@@ -752,7 +752,7 @@
             </div>
             <p class="attribution in-coordinators">
                 <b>Venue-</b>&nbsp;Anywhere (As long as you have internet)<br>
-                <b>Email-</b>&nbsp;osdcjiit@gmail.com<br>
+                <b>Email-</b>&nbsp;osdhack23@gmail.com<br>
                 <a href="https://discord.gg/HRj5JFeHVq"><b><u>Discord</u></b></a>&nbsp;&nbsp;&nbsp;<a
                     href="https://github.com/osdc"><b><u>Github</u></b></a>
             </p>
@@ -1022,13 +1022,13 @@
                                 src="assets/socials/instagram.svg" /> </a>
                         <a target="_blank" href="https://www.facebook.com/groups/jiitlug/"> <img class="social-icon"
                             src="assets/socials/facebook.svg" /> </a>
-                        <!-- <a target="_blank" href="mailto:osdcjiit@gmail.com"><img class="social-icon"
+                        <!-- <a target="_blank" href="mailto:osdhack23@gmail.com"><img class="social-icon"
                                 src="assets/socials/mail.svg" /></a> -->
                         <!-- <a target="_blank" href="https://code.OSDHACK.org/"> <img class="social-icon" src="assets/socials/code.svg"/></a> -->
                     </div>
                     <p class="attribution">
                         <b>Venue-</b>&nbsp;Anywhere (As long as you have internet)<br>
-                        <b>Email-</b>&nbsp;osdcjiit@gmail.com<br>
+                        <b>Email-</b>&nbsp;osdhack23@gmail.com<br>
                         <a href="https://discord.gg/HRj5JFeHVq"><b><u>Discord</u></b></a>&nbsp;&nbsp;&nbsp;&nbsp;<a
                             href="https://github.com/osdc"><b><u>Github</u></b></a>
                         <!-- All rights reserved. <br>
