updated: rules n faqs

--- a/rules.html
+++ b/rules.html
@@ -39,9 +39,12 @@
 </head>
 <!-- <div id="backgound_logo" style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;"></div> -->
 
-<body background="assets/img/Speakers_Background.svg" style="background-size: 100%;">
-<a href="index.html">
-  <div id="osdhack">
+<body
+  background="assets/img/Speakers_Background.svg"
+  
+>
+  <a href="index.html">
+    <div id="osdhack">
       <img
         alt="logo"
         src="assets/img/osdhack.png"
@@ -103,21 +106,46 @@
 
   <h1>Rules</h1>
   <hr class="style-two" />
-  <ul class="rules" style="padding-bottom:1%">
-    <p style="color: black">We are deliberating the rules of the hackathon to provide you all the best experience possible!</p>
-    
+  <ul class="rules" style="padding-bottom: 1%">
+    <ol style="color: black">
+      <li>Only students not part of the institute are allowed to participate in the Online mode.</li>
+      <li>
+        The participants should register before 9:00pm on 19th of April 2023.
+      </li>
+      <li>
+        Participants are not allowed to make teams with members part of JIIT, but can form teams with students outside of the institute.
+      </li>
+      <li>Each team should consist of at least 3 and at most 4 members.</li>
+      <li>
+        Participants must follow the given theme or topic for the hackathon.
+      </li>
+      <li>
+        Participants must not use any copyrighted materials.
+      </li>
+      <li>
+        Participants must submit their final project within the given time limit.
+      </li>
+      <li>
+        Participants must not use any illegal or unethical methods to win the competition.
+      </li>
+      <li>
+        Any kind of misbehavior or violation of the rules can lead to disqualification from the competition.
+      </li>
+      <li>
+        Participants must use their own equipment and internet connection for the competition.
+      </li>
+    </ol>
   </ul>
-  
 
-  <div class="faq" style="padding: 65px 0;">
+  <div class="faq" style="padding: 65px 0">
     <h1>FAQs</h1>
     <hr class="style-two" />
-    <div class="global-label" style="margin-bottom:0;"></div>
+    <div class="global-label" style="margin-bottom: 0"></div>
     <!--1 question-->
     <div>
       <div class="faq-label">
         <div class="faq-label-text">
-          What's a Hackathon, and can I participate?
+          Can students from JIIT participate in the online OSDHack?
         </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
@@ -125,26 +153,23 @@
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          A Hackathon is an intense event that brings together designers and
-          developers along with industry experts to identify problems and create
-          software solutions, usually within 24-48 hours. Whether that's high
-          school, undergrad, or graduate, we believe you can get something out
-          of the event.
+          No, for the students of JIIT, OSDHack is being organized in the Institute premises.
         </div>
       </div>
     </div>
     <!--2 question-->
     <div>
       <div class="faq-label">
-        <div class="faq-label-text">How much does it cost?</div>
+        <div class="faq-label-text">
+          Who is allowed to participate in the online hackathon? 
+        </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
         </div>
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          Zero. Zip. Zilch. Nada. Nothing. Admission to OSDHack is completely
-          free for everyone!
+          The online hackathon is open to all students, regardless of their educational institution.
         </div>
       </div>
     </div>
@@ -152,7 +177,7 @@
     <div>
       <div class="faq-label">
         <div class="faq-label-text">
-          What if I don't want to present my hack?
+          Can participants make teams with members from outside their educational institution in the online hackathon? 
         </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
@@ -160,41 +185,39 @@
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          Unfinished or unimpressive (so you think) projects should be presented
-          anyway! Presenting your hack gives you a chance to be proud of what
-          you’ve done, and a constructive perspective of where you should be
-          headed next.
+          Yes, participants are allowed to make teams with members from outside their own educational institutions.
         </div>
       </div>
     </div>
     <!--question 4-->
     <div>
       <div class="faq-label">
-        <div class="faq-label-text">Can we apply as a team?</div>
+        <div class="faq-label-text">
+          How many members can be in a team in the online hackathon?
+        </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
         </div>
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          Yes! This hackathon is strictly a team competition. We believe that
-          you’re stronger as a team than you are apart. You can join or create a
-          team once you've started an individual application.
+          Each team should consist of at least 3 and at most 4 members.
         </div>
       </div>
     </div>
     <!--question 5-->
     <div>
       <div class="faq-label">
-        <div class="faq-label-text">How big can a team be?</div>
+        <div class="faq-label-text">
+          Is there a theme or topic for the online hackathon?
+        </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
         </div>
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          Up to 4 people large! Pro Tip: Aim to have a mix of people with both
-          design and developer skills
+          Yes, participants must follow the given theme or topic for the hackathon. <b>(BACK TO THE FUTURE)</b>
         </div>
       </div>
     </div>
@@ -202,7 +225,7 @@
     <div>
       <div class="faq-label">
         <div class="faq-label-text">
-          What if I don't have a team or an idea?
+          Can participants use copyrighted materials without permission in the online hackathon? 
         </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
@@ -210,11 +233,7 @@
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          Don't worry, most people don’t! We’ll have team formation and ideation
-          events geared towards helping you find people to work with. It’s
-          perfectly normal to go around to people, tell them you’re looking for
-          a team, and ask if you can help out. You can also show yourself off at
-          #teamup!
+          No, participants must not use any copyrighted materials without permission.
         </div>
       </div>
     </div>
@@ -222,8 +241,7 @@
     <div>
       <div class="faq-label">
         <div class="faq-label-text">
-          Can I attend talks + workshops without being accepted for the
-          hackathon?
+          How should participants submit their final project in the online hackathon? 
         </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
@@ -231,9 +249,23 @@
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          Yes! The conference is going to be open to everyone who's interested.
-          We will keep you folks updated with the schedule and the links to the
-          talks.
+          Participants must submit their final project within the given time limit. 
+        </div>
+      </div>
+    </div>
+    <!--question 8-->
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">
+          What happens if a participant violates the rules or engages in misbehavior in the online hackathon?
+        </div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
+      </div>
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          Any kind of misbehavior or violation of the rules can lead to disqualification from the competition.
         </div>
       </div>
     </div>
