--- a/index.html
+++ b/index.html
@@ -100,16 +100,12 @@
                             </button>
                         </a>
                         <div 
-                            class="apply-button" 
-                            data-hackathon-slug="osdhack23" 
-                            data-button-theme="dark"
-                            style="height: 44px; width: 312px"
+	                        class="apply-button" 
+	                        data-hackathon-slug="osdhack23" 
+	                        data-button-theme="light"
+	                        style="height: 44px; width: 312px"
                         ></div>
-
                     </div>
-
-
-
                 </div>
                 <div id="cover-mobile">
                     <div class="menu">
@@ -171,25 +167,33 @@
                             <!-- <a target="_blank" href="https://medium.com/OSDHACK-stories"> <img class="social-icon" src="assets/socials/medium.svg"/></i> </a> -->
                             <a target="_blank" href="https://twitter.com/osdcjiit"> <img width="48px" class="social-icon"
                                     src="assets/socials/twitter.svg" /></a>
+                                    <a target="_blank" href="https://www.linkedin.com/company/osdcjiit/">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46"
+                                            fill="#001d55" class="bi bi-linkedin" viewBox="0 0 16 16">
+                                        <path
+                                        d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                                        </svg>
+                                    </a>
                                     <br>
                                     <a href="https://discord.gg/HRj5JFeHVq" target="_blank">
                                         <button id="discord" style="font-family: LemonMilkMedium;margin-top:20px;border:none;padding: 10px 25px;border-radius: 3px;background-color: #1b4481;color: white;">
                                             Discord Invite
                                         </button>
                                     </a>
-                                    <div 
-                                        class="apply-button" 
-                                        data-hackathon-slug="osdhack23" 
-                                        data-button-theme="dark"
-                                        style="height: 44px; width: 312px"
-                                    ></div>
-                                    
                         </div>
-                        <a href="rules.html" target="_blank">
+                        <div>
+                            <a href="rules.html" target="_blank">
                             <button id="discord" style="font-family: LemonMilkMedium;margin-top:20px;border:none;padding: 10px 25px;border-radius: 3px;background-color: #1b4481;color: white;">
                                 Rules & FAQ
                             </button>
-                        </a>
+                        </a>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <div 
+                            class="apply-button" 
+                            data-hackathon-slug="osdhack23" 
+                            data-button-theme="dark"
+                            style="height: 44px; width: 312px"
+                        ></div>
+                        </div>
                     </div>
                 </div>
 
@@ -849,6 +853,7 @@
         ga('send', 'pageview');
         
     </script>
+    <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
 </body>
 
 </html>
