--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <div 
                             class="apply-button" 
                             data-hackathon-slug="osdhack23" 
-                            data-button-theme="dark"
+                            data-button-theme="light"
                             style="height: 44px; width: 312px"
                         ></div>
                         </div>
