fixed the postion of devfolio button

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </button>
                         </a>
                         <div 
-	                        class="apply-button" 
+	                        class="apply-button test" 
 	                        data-hackathon-slug="osdhack23" 
 	                        data-button-theme="light"
 	                        style="height: 44px; width: 312px"
