--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </button>
                         </a>
                         <div 
-	                        class="apply-button test" 
+	                        class="apply-button devfolio_but" 
 	                        data-hackathon-slug="osdhack23" 
 	                        data-button-theme="light"
 	                        style="height: 44px; width: 312px"
@@ -176,19 +176,19 @@
                                     </a>
                                     <br>
                                     <a href="https://discord.gg/HRj5JFeHVq" target="_blank">
-                                        <button id="discord" style="font-family: LemonMilkMedium;margin-top:20px;border:none;padding: 10px 25px;border-radius: 3px;background-color: #1b4481;color: white;">
+                                        <button id="discord" class="discord_but_mobile" style="font-family: LemonMilkMedium;margin-top:20px;border:none;padding: 10px 25px;border-radius: 3px;background-color: #1b4481;color: white;">
                                             Discord Invite
                                         </button>
                                     </a>
                         </div>
                         <div>
                             <a href="rules.html" target="_blank">
-                            <button id="discord" style="font-family: LemonMilkMedium;margin-top:20px;border:none;padding: 10px 25px;border-radius: 3px;background-color: #1b4481;color: white;">
+                            <button id="discord" class="rules_but" style="font-family: LemonMilkMedium;margin-top:20px;border:none;padding: 10px 25px;border-radius: 3px;background-color: #1b4481;color: white;">
                                 Rules & FAQ
                             </button>
                         </a>&nbsp;&nbsp;&nbsp;&nbsp;
                         <div 
-                            class="apply-button" 
+                            class="apply-button devfolio_but_mobile" 
                             data-hackathon-slug="osdhack23" 
                             data-button-theme="light"
                             style="height: 44px; width: 312px"
