changed the postion of devfolio button

--- a/index.html
+++ b/index.html
@@ -187,12 +187,14 @@
                                 Rules & FAQ
                             </button>
                         </a>&nbsp;&nbsp;&nbsp;&nbsp;
-                        <div 
-                            class="apply-button devfolio_but_mobile" 
+                        <div class="devfolio_but_mobile">
+                            <div 
+                            class="apply-button" 
                             data-hackathon-slug="osdhack23" 
                             data-button-theme="light"
                             style="height: 44px; width: 312px"
-                        ></div>
+                            ></div>
+                        </div>
                         </div>
                     </div>
                 </div>
