fixed the postion of devfolio button

--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
                                 Discord Invite
                             </button>
                         </a>
-                        <div 
-	                        class="apply-button devfolio_but" 
+                        <div class="devfolio_but">
+                            <div 
+	                        class="apply-button" 
 	                        data-hackathon-slug="osdhack23" 
 	                        data-button-theme="light"
 	                        style="height: 44px; width: 312px"
-                        ></div>
+                            ></div>
+                        </div>
                     </div>
                 </div>
                 <div id="cover-mobile">
