updated: email and discord invite

--- a/index.html
+++ b/index.html
@@ -486,15 +486,15 @@
 
             <p class="attribution in-coordinators">
                 <b>Venue-</b>&nbsp;JIIT, Sector-62<br>
-                <b>Email-</b>&nbsp;osdcjiit@gmail.com<br>
-                <a href="https://discord.gg/kAH6WdNchQ"><b><u>Discord Link</u></b></a>&nbsp;&nbsp;&nbsp;&nbsp;<a
+                <b>Email-</b>&nbsp;osdhack23@gmail.com<br>
+                <a href="https://discord.com/invite/HRj5JFeHVq"><b><u>Discord Link</u></b></a>&nbsp;&nbsp;&nbsp;&nbsp;<a
                     href="https://github.com/osdc"><b><u>Github Link</u></b></a>
             </p>
 
             <!-- <div class="cloud-section" id="cloud-section3">
                 <img id="cloud-layer-a" class="cloud-layer" src="assets/img/Cloud_Layer_top.svg" />
                 <img id="cloud-layer-b" class="cloud-layer" src="assets/img/Cloud_Layer_top.svg" />
-                <img id="cloud-layer-c" class="cloud-layer" src="assets/img/Cloud_Layer_top.svg" />
+                <img id="cloud-layer-c" class="c    loud-layer" src="assets/img/Cloud_Layer_top.svg" />
             </div> -->
         </div>
 
@@ -764,8 +764,8 @@
                     </div>
                     <p class="attribution">
                         <b>Venue-</b>&nbsp;JIIT, Sector-62<br>
-                        <b>Email-</b>&nbsp;osdcjiit@gmail.com<br>
-                        <a href="https://discord.gg/kAH6WdNchQ"><b><u>Discord&nbspLink</u></b></a>&nbsp;&nbsp;&nbsp;&nbsp;<a
+                        <b>Email-</b>&nbsp;osdhack23@gmail.com<br>
+                        <a href="https://discord.com/invite/HRj5JFeHVq"><b><u>Discord&nbspLink</u></b></a>&nbsp;&nbsp;&nbsp;&nbsp;<a
                             href="https://github.com/osdc"><b><u>Github&nbspLink</u></b></a>
                         <!-- All rights reserved. <br>
                 Code Released under JIIT License. <br> -->
