--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                             <!-- <a target="_blank" href="https://medium.com/OSDHACK-stories"> <img class="social-icon" src="assets/socials/medium.svg"/></i> </a> -->
                             <a target="_blank" href="https://twitter.com/osdcjiit"> <img width="48px" class="social-icon"
                                     src="assets/socials/twitter.svg" /></a>
-                                    <a target="_blank" href="https://www.linkedin.com/company/osdcjiit/">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46"
+                                    <a target="_blank" href="relativehttps://www.linkedin.com/company/osdcjiit/">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" style="position: relative; top: -2px; border-radius: 15%;"
                                             fill="#001d55" class="bi bi-linkedin" viewBox="0 0 16 16">
                                         <path
                                         d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
@@ -235,7 +235,42 @@
             <h1 class="header" id="prizes">Prizes</h1>
             <div class="speaker-heads"
                 style="border-radius: 10px;margin-bottom:50px;padding:70px 15px;background-color: rgba(255,255,255,0.4);width:75%;margin-left: 12%;">
-                <h3 style="font-size: 24px;">TO BE ANNOUNCED</h3>
+                <h3 style="font-size: 24px;">
+                    <div class="card-container">
+                        <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: stretch;">
+                            <div class="prize-card" style="flex: 1; display: inline-block; margin: 20px; padding: 20px;  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); transition: transform 0.3s ease;">
+                              <img class="prize-img" src="assets/img/2.png" style="">
+                              <h3 class="prize-value" style="margin-top: 10px;">2nd Prize<br>12000 INR</h3>
+                            </div>
+                            <div class="prize-card" style="flex: 1; display: inline-block; margin: 20px; padding: 20px; box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); transition: transform 0.3s ease;">
+                              <img class="prize-img" src="assets/img/1.png" style="">
+                              <h3 class="prize-value" style="margin-top: 10px;">1st Prize<br>15000 INR</h3>
+                            </div> 
+                            <div class="prize-card" style="flex: 1; display: inline-block; margin: 20px; padding: 20px;  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); transition: transform 0.3s ease;">
+                              <img class="prize-img" src="assets/img/3.png" style="">
+                              <h3 class="prize-value" style="margin-top: 10px;">3rd Prize<br>9000 INR</h3>
+                            </div>
+                          </div>                          
+                          <br>
+                          <div>
+                            <div >
+                                <div class="mini-prize-card" style="flex: 1; display: inline-block; margin: 20px; padding: 20px;  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); transition: transform 0.3s ease;">
+                                  <img src="assets/img/trophy.png" style="width: 100%; height: auto; max-height: 110px; width: 110px; margin-bottom: 10px; transition: transform 0.3s ease;">
+                                  <h5 style="margin-top: 10px;  color: #001d55;">CTF<br>1500 INR Worth</h5>
+                                </div>
+                                <div class="mini-prize-card" style="flex: 1; display: inline-block; margin: 20px; padding: 20px; box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); transition: transform 0.3s ease;">
+                                  <img src="assets/img/trophy.png" style="width: 100%; height: auto; max-height: 110px; width: 110px; margin-bottom: 10px; transition: transform 0.3s ease;">
+                                  <h5 style="margin-top: 10px;  color: #001d55;">MINI EVENT<br>1500 INR Worth</h5>
+                                </div>
+                              </div> 
+                          </div>                         
+                      </div>
+                      <style>
+                        .card-container:hover img {
+                          transform: translateY(-5px);
+                        }
+                      </style>
+                </h3>
             </div>
 
             <h1 class="header">Speakers</h1>
