--- a/rules.html
+++ b/rules.html
@@ -108,31 +108,43 @@
   <hr class="style-two" />
   <ul class="rules" style="padding-bottom: 1%">
     <ol style="color: black">
-      <li>Only students not part of the institute are allowed to participate in the Online mode.</li>
+      <li>Only students not part of JIIT are allowed to participate in the Online mode.</li>
       <li>
-        The participants should register before 9:00pm on 19th of April 2023.
+        The participants must register before 9:00pm on 19th of April 2023.
       </li>
       <li>
-        Participants are not allowed to make teams with members part of JIIT, but can form teams with students outside of the institute.
+        Participants can form teams with students outside of the institute but are not allowed to make teams with students of JIIT.
       </li>
-      <li>Each team should consist of at least 3 and at most 4 members.</li>
+      <li>Each team should consist of at least 2 and at most 4 members.</li>
       <li>
-        Participants must follow the given theme or topic for the hackathon.
+        Participants must use their own equipment and internet connection for the competition.
       </li>
       <li>
-        Participants must not use any copyrighted materials.
+        There is no restriction on the type of project you come up with, or the languages/tools you use. It can be anything from a web app to a device driver (as long as it is not a hardware project).
+      </li>
+      <li>
+        All code and assets must be created and committed within the time constrictions of the Hackathon. Late commits may not be considered, so avoid any last minute Red Bull rushes.
+      </li>
+      <li>
+        Reusing or incorporating existing open source code or copyright free assets to create your magic (because that's what someone else's code seems like) is allowed, provided that they are appropriately attributed and their license agreements are followed.
+      </li>
+      <li>
+        Your project or the same underlying idea behind the project has not been knowingly submitted by you in any other hackathon/event before.
+      </li>
+      <li>
+        All code written must be compatible with an Open-Source license and should be public.
+      </li>
+      <li>
+        Git should be your primary version control system.
       </li>
       <li>
         Participants must submit their final project within the given time limit.
       </li>
       <li>
-        Participants must not use any illegal or unethical methods to win the competition.
-      </li>
-      <li>
         Any kind of misbehavior or violation of the rules can lead to disqualification from the competition.
       </li>
       <li>
-        Participants must use their own equipment and internet connection for the competition.
+        The Organizing Team's decision on conflicts, results, prizes or any other dispute would be made in all fairness and stands final.
       </li>
     </ol>
   </ul>
@@ -141,6 +153,22 @@
     <h1>FAQs</h1>
     <hr class="style-two" />
     <div class="global-label" style="margin-bottom: 0"></div>
+    <!--0 question-->
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">
+          What's a Hackathon, and can I participate?
+        </div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
+      </div>
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          A Hackathon is an intense event that brings together designers and developers along with industry experts to identify problems and create software solutions, usually within 24-48 hours. Whether that's high school, undergrad, or graduate, we believe you can get something out of the event.
+        </div>
+      </div>
+    </div>
     <!--1 question-->
     <div>
       <div class="faq-label">
@@ -193,7 +221,7 @@
     <div>
       <div class="faq-label">
         <div class="faq-label-text">
-          How many members can be in a team in the online hackathon?
+          Can we apply as a team?
         </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
@@ -201,7 +229,7 @@
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          Each team should consist of at least 3 and at most 4 members.
+          Yes! This hackathon is strictly a team competition. We believe that you’re stronger as a team than you are apart. You can join or create a team once you've started an individual application.
         </div>
       </div>
     </div>
@@ -209,7 +237,7 @@
     <div>
       <div class="faq-label">
         <div class="faq-label-text">
-          Is there a theme or topic for the online hackathon?
+          How big can a team be?
         </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
@@ -217,7 +245,8 @@
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          Yes, participants must follow the given theme or topic for the hackathon. <b>(BACK TO THE FUTURE)</b>
+          From a minimum of 2 people to 4 people large!<br>
+          Pro Tip: Aim to have a mix of people with both design and developer skills           
         </div>
       </div>
     </div>
@@ -225,7 +254,7 @@
     <div>
       <div class="faq-label">
         <div class="faq-label-text">
-          Can participants use copyrighted materials without permission in the online hackathon? 
+          What if I don't want to present my hack? 
         </div>
         <div class="faq-label-icon">
           <span class="material-icons"> expand_more </span>
@@ -233,11 +262,43 @@
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          No, participants must not use any copyrighted materials without permission.
+          Unfinished or unimpressive (so you think) projects should be presented anyway! Presenting your hack gives you a chance to be proud of what you’ve done, and a constructive perspective of where you should be headed next.
         </div>
       </div>
     </div>
     <!--question 7-->
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">
+          What if I don't have a team or an idea?
+        </div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
+      </div>
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          Don't worry, most people don’t! We’ll have team formation and ideation events geared towards helping you find people to work with. It’s perfectly normal to go around to people, tell them you’re looking for a team, and ask if you can help out. You can also show yourself off at <a href = "https://discord.gg/US5WXvZTHA">#find-teammates</a> (In the discord server).
+        </div>
+      </div>
+    </div>
+    <!--question 8-->
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">
+          Can participants use copyrighted materials without permission in the online hackathon?
+        </div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
+      </div>
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          No, participants must not use any copyrighted materials.
+        </div>
+      </div>
+    </div>
+    <!--question 9-->
     <div>
       <div class="faq-label">
         <div class="faq-label-text">
@@ -249,11 +310,11 @@
       </div>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          Participants must submit their final project within the given time limit. 
+          Participants must submit their final project by submitting the link to their github repository within the given time limit. 
         </div>
       </div>
     </div>
-    <!--question 8-->
+    <!--question 10-->
     <div>
       <div class="faq-label">
         <div class="faq-label-text">
@@ -266,6 +327,22 @@
       <div class="faq-answer">
         <div class="faq-answer-content">
           Any kind of misbehavior or violation of the rules can lead to disqualification from the competition.
+        </div>
+      </div>
+    </div>
+    <!--question 11-->
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">
+          Where can participants contact the organizers for more information?
+        </div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
+      </div>
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          We have Discord servers specifically for for the Online <a href="https://discord.gg/9dzMR4A9fQ">OSDHack'23</a>
         </div>
       </div>
     </div>
