--- a/index.html
+++ b/index.html
@@ -393,13 +393,13 @@
             <h3 class="header" style="font-size: 40px;background-image: none;"><b>SILVER</b> </h3>
             <div style="display: flex;justify-content: space-evenly;align-items: center;flex-wrap: wrap;">
                 <a href="https://solana.com " target="_blank">
-                    <img src="assets/img/Solana-Colored.png" alt="SOLANA LOGO" style="padding: 20px; width: 40%;">
+                    <img class="solana-img" src="assets/img/Solana-Colored.png" alt="SOLANA LOGO" style="padding: 20px; width: 40%;">
                 </a>
                 <a href="https://filecoin.io" target="_blank">
-                    <img src="assets/img/Filecoin Coloured White Text.png" alt="FILECOIN LOGO"
+                    <img class="filecoin-img" src="assets/img/Filecoin Coloured White Text.png" alt="FILECOIN LOGO"
                         style=" padding: 20px; width: 50%;">
                 </a>
-                <a href="https://replit.com" target="_blank">
+                <a href="https://replit.com" target="_blank"><br>
                     <img src="assets/img/Replit-light-background.png" alt="REPLIT LOGO"
                         style=" padding: 20px; width: 40%;">
                 </a>
