--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     </div>
                     <img src="assets/img/JIIT_LogoWhite.png" class="logo" style="left: 120px; width: 70px">
                     <img src="assets/img/osdhack.png" class="logo" />
+                    <img src="assets/img/centerOfExcellenceLogo.png" class="logo" style="left: 205px;">
                     <div id="page-title">
                         <!-- <h1 id="title-header">OSDHACK 2023</h1> -->
                         <h2 id="title-sub1" style="margin-top: 0;padding-top: 0 ;font-size: 18px;padding-bottom: 0;">
