fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 <!-- <a target="_blank" href="https://medium.com/OSDHACK-stories"> <img class="social-icon" src="assets/socials/medium.svg"/></i> </a> -->
                                 <a target="_blank" href="https://twitter.com/osdcjiit"> <img width="48px"
                                         class="social-icon" src="assets/socials/twitter.svg" /></a>
-                                <a target="_blank" href="relativehttps://www.linkedin.com/company/osdcjiit/">
+                                <a target="_blank" href="https://www.linkedin.com/company/osdcjiit/">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44"
                                         style="position: relative; top: -2px; border-radius: 15%;" fill="#001d55"
                                         class="bi bi-linkedin" viewBox="0 0 16 16">
