--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
                                     style="flex: 1; display: inline-block; margin: 20px; padding: 20px;  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); transition: transform 0.3s ease;">
                                     <img src="assets/img/trophy.png"
                                         style="width: 100%; height: auto; max-height: 110px; width: 110px; margin-bottom: 10px; transition: transform 0.3s ease;">
-                                    <h5 style="margin-top: 10px;  color: #001d55;">CTF<br>1500 INR Worth</h5>
+                                    <h5 style="margin-top: 10px;  color: #001d55;">CTF<br>1500 INR<br>POOL PRIZE</h5>
                                 </div>
                                 <div class="mini-prize-card"
                                     style="flex: 1; display: inline-block; margin: 20px; padding: 20px; box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3); transition: transform 0.3s ease;">
                                     <img src="assets/img/trophy.png"
                                         style="width: 100%; height: auto; max-height: 110px; width: 110px; margin-bottom: 10px; transition: transform 0.3s ease;">
-                                    <h5 style="margin-top: 10px;  color: #001d55;">MINI EVENT<br>1500 INR Worth</h5>
+                                    <h5 style="margin-top: 10px;  color: #001d55;">MYSTERIOUS EVENT<br>1500 INR<br>POOL PRIZE</h5>
                                 </div>
                             </div>
                         </div>
@@ -306,6 +306,15 @@
                                 <time><b>Tuesday, 11 April 2023: </b></time>
                                 <br>
                                 <p> → <b>12:00 PM</b> Registration Starts
+                                    <br><br>
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <time><b>Tuesday, 20 April 2023: </b></time>
+                                <br>
+                                <p> → <b>11:59 PM</b> Registration Ends
                                     <br><br>
                                 </p>
                             </div>
