--- a/rules.html
+++ b/rules.html
@@ -110,7 +110,7 @@
     <ol style="color: black">
       <li>Only students not part of JIIT are allowed to participate in the Online mode.</li>
       <li>
-        The participants must register before 12:00 pm, April 21st 2023.
+        The participants must register before 12:00 pm, April 20th 2023.
       </li>
       <li>
         Participants can form teams with students outside of the institute but are not allowed to make teams with students of JIIT.
