osdhack logo fixed in rules page

--- a/rules.html
+++ b/rules.html
@@ -45,12 +45,7 @@
 >
   <a href="index.html">
     <div id="osdhack">
-      <img
-        alt="logo"
-        src="assets/img/osdhack.png"
-        class="logo-alt-img"
-        style="width: 7%"
-      />
+      <img src="assets/img/osdhack.png" class="logo" />
     </div>
   </a>
   <div id="jiit">
