added digital ocean logo

--- a/index.html
+++ b/index.html
@@ -394,16 +394,19 @@
             <h3 class="header" style="font-size: 40px;background-image: none;"><b>GOLD</b> </h3>
             <div style="display: flex; justify-content: space-evenly;align-items: center;flex-wrap: wrap;">
                 <a href="https://devfolio.co" target="_blank">
-                    <img src="assets/img/Devfolio_Logo-Black.png" alt="DEVFOLIO LOGO" style="padding: 20px;">
+                    <img src="assets/img/Devfolio_Logo-Black.png" alt="DEVFOLIO LOGO" style="padding: 20px 0px;">
+                </a>
+                <a href="https://www.digitalocean.com/" target="_blank">
+                    <img src="assets/img/DO.png" alt="DIGITAL OCEAN LOGO" style="padding: 20px 0px; height: 7.5rem; width: 90%;">
                 </a>
                 <a href="https://polygon.technology/" target="_blank">
-                    <img src="assets/img/Polygon_Logo-Dark.png" alt="POLYGON LOGO" style=" padding: 20px;">
+                    <img src="assets/img/Polygon_Logo-Dark.png" alt="POLYGON LOGO" style=" padding: 20px 0px;">
                 </a>
             </div>
             <h3 class="header" style="font-size: 40px;background-image: none;"><b>SILVER</b> </h3>
             <div style="display: flex;justify-content: space-evenly;align-items: center;flex-wrap: wrap;">
                 <a href="https://solana.com " target="_blank">
-                    <img class="solana-img" src="assets/img/Solana-Colored.png" alt="SOLANA LOGO" style="padding: 20px; width: 40%;">
+                    <img class="solana-img" src="assets/img/Solana-Colored.png" alt="SOLANA LOGO" style="padding: 20px;">
                 </a>
                 <a href="https://filecoin.io" target="_blank">
                     <img class="filecoin-img" src="assets/img/Filecoin Coloured White Text.png" alt="FILECOIN LOGO"
