fixed rules page

--- a/rules.html
+++ b/rules.html
@@ -138,11 +138,11 @@
   </ul>
 
   <div class="faq" style="padding: 65px 0">
-    <h1>FAQs</h1>
+    <h1 class="heading-faqs">FAQs</h1>
     <hr class="style-two" />
     <div class="global-label" style="margin-bottom: 0"></div>
     <!--0 question-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           What's a Hackathon, and can I participate?
@@ -158,7 +158,7 @@
       </div>
     </div>
     <!--1 question-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           Can students from JIIT participate in the online OSDHack?
@@ -174,7 +174,7 @@
       </div>
     </div>
     <!--2 question-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           Who is allowed to participate in the online hackathon? 
@@ -190,7 +190,7 @@
       </div>
     </div>
     <!-- 3 question -->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           Can participants make teams with members from outside their educational institution in the online hackathon? 
@@ -206,7 +206,7 @@
       </div>
     </div>
     <!--question 4-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           Can we apply as a team?
@@ -222,7 +222,7 @@
       </div>
     </div>
     <!--question 5-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           How big can a team be?
@@ -239,7 +239,7 @@
       </div>
     </div>
     <!--question 6-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           What if I don't want to present my hack? 
@@ -255,7 +255,7 @@
       </div>
     </div>
     <!--question 7-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           What if I don't have a team or an idea?
@@ -271,7 +271,7 @@
       </div>
     </div>
     <!--question 8-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           Can participants use copyrighted materials without permission in the online hackathon?
@@ -287,7 +287,7 @@
       </div>
     </div>
     <!--question 9-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           How should participants submit their final project in the online hackathon? 
@@ -303,7 +303,7 @@
       </div>
     </div>
     <!--question 10-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           What happens if a participant violates the rules or engages in misbehavior in the online hackathon?
@@ -319,7 +319,7 @@
       </div>
     </div>
     <!--question 11-->
-    <div>
+    <div class="faq-question-ans">
       <div class="faq-label">
         <div class="faq-label-text">
           Where can participants contact the organizers for more information?
